------------------------------------------------------------------------
KEY CHANGES:
	- CHANGE: Switch to Raylib 5.0 and Raygui 4.0.
	- CHANGE: Audio device no longer initialize automatically in case some other device is used.
	- ADDED: More audio device management functions.
	- ADDED: Random values generation functions.
	- ADDED: More Window-related functions.

DETAILED CHANGES:
	- REMOVED: DrawLineBezierQuad, DrawLineBezierCubic.
	- REMOVED: GenImageGradientV, GenImageGradientH.
	- ADDED: GenImageGradientLinear and GenImageGradientSquare.
	- ADDED: LoadImageSvg and ExportImageToMemory.
	- ADDED: ImageRotate.
	- ADDED: SetTextLineSpacing.
	- ADDED: LoadSoundAlias and UnloadSoundAlias.
	- ADDED: GetApplicationDirectory.

------------------------------------------------------------------------
Release:	ReiLua version 0.6.0		Using Raylib 4.5
------------------------------------------------------------------------
KEY CHANGES:
	- CHANGED: Switch from ID based objects to userdata.
	- CHANGED: Object unloading is handled by Lua garbage collection by default.
	- CHANGED: Rely mostly on luaL_check* functions for arg checking.
	- CHANGED: ModelAnimations are changed to separate ModelAnimation types as in Raylib.
	- ADDED: Userdata objects can be referenced with lightuserdata.
	- ADDED: GC_UNLOAD build time define for enabling/disabling Lua garbage collection for objects.
	Can be checked with IsGCUnloadEnabled
	- ADDED: Shaders management functions.
	- ADDED: Compute shader management and Buffer management.
	- ADDED: More RLGL Initialization functions.
	- ADDED: GlyphInfo type.
	- ADDED: DrawTextEx.
	- CHANGED: DrawText is now DrawTextEx like in Raylib.
	- ADDED: Global variable descriptions for API.
	- CHANGED: Organized functions by putting them in the same order as in Raylib.
	- ADDED: Matrix library.
	- Removed: GC_UNLOAD build time define and replaced with flag to change it at runtime.
	- ADDED: Quaternion library.